--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pompeo</title>
-	<link rel="stylesheet" href="./">
+	<link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 	<header class="container">
-		
+		<div class="header__inner">
+			<div class="header__logo">
+				<a href="#">Pompeo</a>
+			</div>
+			<nav>
+				<a href="">home</a>
+				<a href="">about</a>
+				<a href="">shop</a>
+				<a href="">contact</a>
+			</nav>
+			<div class="header__cart">
+				<img src="./image/header-line.svg" alt="line">
+				<img src="./image/header-cart.svg" alt="cart">
+				<a href="#">Cart</a>
+			</div>
+		</div>
 	</header>
 </body>
+
 </html>
