--- a/CloudBudget/index.html
+++ b/CloudBudget/index.html
@@ -16,7 +16,7 @@
 					<img src="./image/logo.svg" alt="logo">
 				</a>
 			</div>
-			<nav>	
+			<nav>
 				<a href="#">overview</a>
 				<a href="#">features</a>
 				<a href="#">technology</a>
@@ -31,118 +31,120 @@
 	</header>
 	<main>
 		<section class="info">
-			<div class="info-block">
-				<h1>CloudBudget</h1>
-				<p>Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of Up to €4.99</p>
-				<button>sing up</button>
-			</div>
-		</section>
+				<div class="info-block">
+					<h1>CloudBudget</h1>
+					<p>Cloud budget management for everyone. Only €69.95 a Month After a 7 Day Trial of Up to €4.99</p>
+					<button>sing up</button>
+				</div>
+			</section>
 
-		<section class="possibilities container">
-			<div class="possibilities-info">
-				<h2>Easy to Use Cloud Budget Management Software</h2>
-				<p>Our software is made so you can access and manage your budget and expenses online at any time from
-					any device. It
-					provides detailed income and expense reports with graphs so you can easilly see your spending
-					patterns and budget at a
-					glance. Read below to find out more.</p>
-				<a href="#" class="link">Learn More</a>
-			</div>
-			<div class="possibilities-visual">
-				<img src="./image/posibilities.png" alt="staff">
-			</div>
-		</section>
+			<section class="possibilities container">
+				<div class="possibilities-info">
+					<h2>Easy to Use Cloud Budget Management Software</h2>
+					<p>Our software is made so you can access and manage your budget and expenses online at any time
+						from
+						any device. It
+						provides detailed income and expense reports with graphs so you can easilly see your spending
+						patterns and budget at a
+						glance. Read below to find out more.</p>
+					<a href="#" class="link">Learn More</a>
+				</div>
+				<div class="possibilities-visual">
+					<img src="./image/posibilities.png" alt="staff">
+				</div>
+			</section>
 
-		<section class="features">
-			<h2>Features</h2>
-			<div class="features__inner container">
-				<div class="features-block">
-					<img src="./image/features-1.png" alt="feature image card">
-					<div class="features-block__inner">
-						<h3>Supports All Currencies and Cards</h3>
-						<p>We support all popular currencies and is fully customizable to add</p>
-						<a class="link feature_link" href="#">Read More</a>
+			<section class="features">
+				<h2>Features</h2>
+				<div class="features__inner container">
+					<div class="features-block">
+						<img src="./image/features-1.png" alt="feature image card">
+						<div class="features-block__inner">
+							<h3>Supports All Currencies and Cards</h3>
+							<p>We support all popular currencies and is fully customizable to add</p>
+							<a class="link feature_link" href="#">Read More</a>
+						</div>
+					</div>
+					<div class="features-block">
+						<img src="./image/features-2.png" alt="feature image card">
+						<div class="features-block__inner">
+							<h3>Manage your expenses on the go</h3>
+							<p>You can access your account from anywhere in the world on any device</p>
+							<a class="link feature_link" href="">Read More</a>
+						</div>
+					</div>
+					<div class="features-block">
+						<img src="./image/features-3.png" alt="feature image card">
+						<div class="features-block__inner">
+							<h3>Cloud Budget Management Software</h3>
+							<p>Our software is made so you can access and manage your budget</p>
+							<a class="link feature_link" href="">Read More</a>
+						</div>
 					</div>
 				</div>
-				<div class="features-block">
-					<img src="./image/features-2.png" alt="feature image card">
-					<div class="features-block__inner">
-						<h3>Manage your expenses on the go</h3>
-						<p>You can access your account from anywhere in the world on any device</p>
-						<a class="link feature_link" href="">Read More</a>
+			</section>
+			<section class="technology">
+				<h2>Technology</h2>
+				<div class="technology__inner container">
+					<div class="technology-block">
+						<img src="./image/technology-1.svg" alt="technology image card">
+						<h3>Cloud Storage</h3>
+						<p>Access your account from anywhere in the world on any device</p>
+					</div>
+					<div class="technology-block">
+						<img src="./image/technology-2.svg" alt="">
+						<h3>Secure</h3>
+						<p>All your information is stored on secure cloud servers</p>
+					</div>
+					<div class="technology-block">
+						<img src="./image/technology-3.svg" alt="">
+						<h3>PDF Download</h3>
+						<p>Download any of your reports in PDF format</p>
+					</div>
+					<div class="technology-block">
+						<img src="./image/technology-4.svg" alt="">
+						<h3>CSV Download</h3>
+						<p>All your information is stored on secure cloud servers</p>
 					</div>
 				</div>
-				<div class="features-block">
-					<img src="./image/features-3.png" alt="feature image card">
-					<div class="features-block__inner">
-						<h3>Cloud Budget Management Software</h3>
-						<p>Our software is made so you can access and manage your budget</p>
-						<a class="link feature_link" href="">Read More</a>
+			</section>
+			<section class="focus">
+				<div class="focus__inner container">
+					<div class="focus-content">
+						<h3>Stay focused on saving money</h3>
+						<p>It is important to stay focused on saving money in any way you can. We help you monitor your
+							spending habits so you can
+							easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
+						<div class="focus-content__img">
+							<img src="./image/focus-1.svg" alt="">
+							<img src="./image/focus-2.svg" alt="">
+							<img src="./image/focus-3.svg" alt="">
+						</div>
+					</div>
+					<div class="focus-img">
+						<img src="./image/focus-img.png" alt="">
 					</div>
 				</div>
-			</div>
-		</section>
-		<section class="technology">
-			<h2>Technology</h2>
-			<div class="technology__inner container">
-				<div class="technology-block">
-					<img src="./image/technology-1.svg" alt="technology image card">
-					<h3>Cloud Storage</h3>
-					<p>Access your account from anywhere in the world on any device</p>
+			</section>
+			<section class="contact container">
+				<div class="contact__intro">
+					<h2>Contact</h2>
+					<p>Questions or concerns? Just fill out the form below and our support team will get back to you
+						within
+						24 hours</p>
 				</div>
-				<div class="technology-block">
-					<img src="./image/technology-2.svg" alt="">
-					<h3>Secure</h3>
-					<p>All your information is stored on secure cloud servers</p>
-				</div>
-				<div class="technology-block">
-					<img src="./image/technology-3.svg" alt="">
-					<h3>PDF Download</h3>
-					<p>Download any of your reports in PDF format</p>
-				</div>
-				<div class="technology-block">
-					<img src="./image/technology-4.svg" alt="">
-					<h3>CSV Download</h3>
-					<p>All your information is stored on secure cloud servers</p>
-				</div>
-			</div>
-		</section>
-		<section class="focus">
-			<div class="focus__inner container">
-				<div class="focus-content">
-					<h3>Stay focused on saving money</h3>
-					<p>It is important to stay focused on saving money in any way you can. We help you monitor your
-						spending habits so you can
-						easily spot and cut any unnecessary expenses. Simply join today to get started!</p>
-					<div class="focus-content__img">
-						<img src="./image/focus-1.svg" alt="">
-						<img src="./image/focus-2.svg" alt="">
-						<img src="./image/focus-3.svg" alt="">
-					</div>
-				</div>
-				<div class="focus-img">
-					<img src="./image/focus-img.png" alt="">
-				</div>
-			</div>
-		</section>
-		<section class="contact container">
-			<div class="contact__intro">
-				<h2>Contact</h2>
-				<p>Questions or concerns? Just fill out the form below and our support team will get back to you within
-					24 hours</p>
-			</div>
-			<div class="contact__info">
-				<input type="text" placeholder="First Name">
-				<input type="text" placeholder="Last Name">
-				<input type="number" placeholder="Phone Number">
-				<select name="Select Service" id="Select Service">
-					<option value="Select Service">Select Service</option>
-					<option value="Service-1">Service-1</option>
-				</select>
+				<div class="contact__info">
+					<input type="text" placeholder="First Name">
+					<input type="text" placeholder="Last Name">
+					<input type="number" placeholder="Phone Number">
+					<select name="Select Service" id="Select Service">
+						<option value="Select Service">Select Service</option>
+						<option value="Service-1">Service-1</option>
+					</select>
 
-				<button>submit now</button>
-			</div>
-		</section>
+					<button>submit now</button>
+				</div>
+			</section>
 	</main>
 	<footer>
 		<div class="footer__inner container">
@@ -184,4 +186,3 @@
 </body>
 
 </html>
-
