--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -27,6 +27,21 @@
 			</div>
 		</div>
 	</header>
+	<main>
+		<section class="info">
+			<div class="info__inner container">
+				<div class="info__block ">
+					<h5 class="subtitle">Pompeo POttery</h5>
+					<h1>Unique Porcelain <span>&</span> Stone Collection</h1>
+					<p>Unique & modern pottery made by our master in porcelain & stones</p>
+					<button class="button__style">Shop Collection</button>
+				</div>
+				<div class="info__visual">
+					<img src="./image/info-block-image.png" alt="vase visual image">
+				</div>
+			</div>
+		</section>
+	</main>
 </body>
 
 </html>
