--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -32,12 +32,66 @@
 			<div class="info__inner container">
 				<div class="info__block ">
 					<h5 class="subtitle">Pompeo POttery</h5>
-					<h1>Unique Porcelain <span>&</span> Stone Collection</h1>
+					<h1>Unique Porcelain <span class="and_span">&</span> Stone Collection</h1>
 					<p>Unique & modern pottery made by our master in porcelain & stones</p>
 					<button class="button__style">Shop Collection</button>
 				</div>
 				<div class="info__visual">
 					<img src="./image/info-block-image.png" alt="vase visual image">
+				</div>
+			</div>
+		</section>
+		<section class="categorie">
+			<p class="complementary__titile">Hand Craft Pottery</p>
+			<div class="categorie__inner container">
+				<div class="categorie__inner__header">
+					<h5 class="subtitle">Product Categories</h5>
+					<h2>Porcelain <span>&</span> Pottery</h2>
+				</div>
+				<div class="categorie__inner__visual">
+					<div class="categorie__inner__visual__block">
+						<img src="./image/categorie-1.svg" alt="">
+						<div class="categorie__inner__visual__block__product">
+							<img src="./image/categorie-1-vase.png" alt="vases image">
+							<p>Vases</p>
+						</div>
+					</div>
+					<div class="categorie__inner__visual__block">
+						<img src="./image/categorie-2.svg" alt="">
+						<div class="categorie__inner__visual__block__product">
+							<img src="./image/categorie-2-mugs.png" alt="mugs image">
+							<p>Mugs</p>
+						</div>
+					</div>
+					<div class="categorie__inner__visual__block">
+						<img src="./image/categorie-3.svg" alt="">
+						<div class="categorie__inner__visual__block__product">
+							<img src="./image/categorie-3-plates.png" alt="plates image">
+							<p>plates</p>
+						</div>
+					</div>
+				</div>
+				<div class="categorie__inner__info">
+					<div class="categorie__inner__info__block">
+						<h3>Hand Grafted Pottery since 1990</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
+							eros
+							elementum. Duis cursus, mi quis
+							viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean
+							faucibus
+							nibh et justo cursus id
+							rutrum lorem imperdiet. Nunc ut sem vitae risus posuere.</p>
+					</div>
+					<div class="categorie__inner__info__block">
+						<h3>We Provide Premium Pottery Produts</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
+							eros
+							elementum. Duis cursus, mi quis
+							viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean
+							faucibus
+							nibh et justo cursus id
+							rutrum lorem imperdiet. Nunc ut sem vitae risus posuere.</p>
+					</div>
 				</div>
 			</div>
 		</section>
