Pompeo - feature/test

--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -95,6 +95,39 @@
 				</div>
 			</div>
 		</section>
+		<section class="featured-product">
+			<p class="complementary__titile">Featured Products</p>
+			<div class="featured-product__inner container">
+				<div class="featured-product__inner__block">
+					<div class="featured-product__inner__block__visual">
+						<img src="./image/feature-product-vase.png" alt="">
+					</div>
+					<div class="featured-product__inner__block__text">
+						<h4>Gold & Black Pottery</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut
+							labore dolore aua. Ut enim
+							ad minim veniam, quis nostrud exercitationulco laboris nisi ut aliquip ex ea commodo
+							consequatuisaute.</p>
+						<a href="">View Details</a>
+					</div>
+				</div>
+				<div class="featured-product__inner__block">
+					<div class="featured-product__inner__block__visual">
+						<img src="./image/feature-product-vase-2.png" alt="">
+					</div>
+					<div class="featured-product__inner__block__text">
+						<h4>Orange Ceramic</h4>
+						<p>Pri cu dico labores officiis, odio principes complectitur ad sea. Sea id doctus forensibus,
+							nec lorem vocent
+							aliquam eu.
+							Aliquid definitiones id cum, ad meliore perpetua referrentur sed. Quas suscipit ad mea
+							verear vivendo tincidunt.
+						</p>
+						<a href="">View Details</a>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
