Pompeo - feature/master

--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -42,7 +42,7 @@
 			</div>
 		</section>
 		<section class="categorie">
-			<p class="complementary__titile">Hand Craft Pottery</p>
+			<p class="complementary__title">Hand Craft Pottery</p>
 			<div class="categorie__inner container">
 				<div class="categorie__inner__header">
 					<h5 class="subtitle">Product Categories</h5>
@@ -96,11 +96,13 @@
 			</div>
 		</section>
 		<section class="featured-product">
-			<p class="complementary__titile">Featured Products</p>
+			<div class="line"></div>
+			<p class="complementary__title">Featured Products</p>
 			<div class="featured-product__inner container">
-				<div class="featured-product__inner__block">
-					<div class="featured-product__inner__block__visual">
+				<div class="featured-product__inner__gold-black-pottery">
+					<div class="featured-product__inner__gold-black-pottery__visual">
 						<img src="./image/feature-product-vase.png" alt="">
+						<img src="./image/feature-product-vase-rectungle.png" alt="">
 					</div>
 					<div class="featured-product__inner__block__text">
 						<h4>Gold & Black Pottery</h4>
@@ -111,9 +113,10 @@
 						<a href="">View Details</a>
 					</div>
 				</div>
-				<div class="featured-product__inner__block">
-					<div class="featured-product__inner__block__visual">
+				<div class="featured-product__inner__orange-ceramic">
+					<div class="featured-product__inner__orange-ceramic__visual">
 						<img src="./image/feature-product-vase-2.png" alt="">
+						<img src="./image/feature-product-vase-rectungle.png" alt="">
 					</div>
 					<div class="featured-product__inner__block__text">
 						<h4>Orange Ceramic</h4>
