--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -131,6 +131,79 @@
 				</div>
 			</div>
 		</section>
+		<section class="store">
+			<div class="line"></div>
+			<p class="complementary__title">Product Collections</p>
+			<div class="store__inner container">
+				<div class="store__heading">
+					<h5 class="subtitle">Our online store</h5>
+					<h2>Pottery Collection</h2>
+				</div>
+				<div class="store__cards">
+					<div class="store__item">
+						<div class="store__card__visual">
+							<img src="./image/store-item-1.png" alt="">
+						</div>
+						<div class="store__card__cost">
+							<a href="#">Decor Plate</a>
+							<p>$ 65.00 USD</p>
+							<div class="line"></div>
+						</div>
+					</div>
+					<div class="store__item">
+						<div class="store__card__visual">
+							<img src="./image/store-item-2.png" alt="">
+						</div>
+						<div class="store__card__cost">
+							<a href="#">Mint Pottery</a>
+							<p>$ 75.00 USD</p>
+							<div class="line"></div>
+						</div>
+					</div>
+					<div class="store__item">
+						<div class="store__card__visual">
+							<img src="./image/store-item-3.png" alt="">
+						</div>
+						<div class="store__card__cost">
+							<a href="#">Set Of Potterys</a>
+							<p>$ 125.00 USD</p>
+							<div class="line"></div>
+						</div>
+					</div>
+					<div class="store__item">
+						<div class="store__card__visual">
+							<img src="./image/store-item-4.png" alt="">
+						</div>
+						<div class="store__card__cost">
+							<a href="#">Orange Ceramic</a>
+							<p>$ 55.00 USD</p>
+							<div class="line"></div>
+						</div>
+					</div>
+					<div class="store__item">
+						<div class="store__card__visual">
+							<img src="./image/store-item-5.png" alt="">
+						</div>
+						<div class="store__card__cost">
+							<a href="#">Dark Bowl</a>
+							<p>$ 115.00 USD</p>
+							<div class="line"></div>
+						</div>
+					</div>
+					<div class="store__item">
+						<div class="store__card__visual">
+							<img src="./image/store-item-6.png" alt="">
+						</div>
+						<div class="store__card__cost">
+							<a href="#">Square Pottery</a>
+							<p>$ 75.00 USD</p>
+							<div class="line"></div>
+						</div>
+					</div>
+				</div>
+				<button class="button__style">View All Products</button>
+			</div>
+		</section>
 	</main>
 </body>
 
