Pompeo - new-collection

--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -204,6 +204,14 @@
 				<button class="button__style">View All Products</button>
 			</div>
 		</section>
+		<section class="new-collection">
+			<div class="new-collection__inner container">
+				<h5 class="subtitle">Pompeo POttery</h5>
+				<h2>Ready to start shopping?</h2>
+				<p>Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span> . Suspendisse varius enim in eros elementum.</p>
+				<button class="button__style">New Collection</button>
+			</div>
+		</section>
 	</main>
 </body>
 
