Popmeo - contact/test

--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -212,6 +212,22 @@
 				<button class="button__style">New Collection</button>
 			</div>
 		</section>
+		<section class="contact">
+			<div class="contact__inner container">
+				<div class="contact__header">
+					<img src="./image/contact-header-image.png" alt="">
+					<h5 class="subtitle">Latest news</h5>
+				</div>
+				<div class="contact__text">
+					<h2>Latest news<span>&</span>New updates</h2>
+				</div>
+				<div class="contact__info">
+					<input type="email" placeholder="Enter your email">
+					<button>SUBSCRIBE</button>
+					<input type="radio" >
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 
