Pompeo - contact/master

--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -208,11 +208,13 @@
 			<div class="new-collection__inner container">
 				<h5 class="subtitle">Pompeo POttery</h5>
 				<h2>Ready to start shopping?</h2>
-				<p>Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span> . Suspendisse varius enim in eros elementum.</p>
+				<p>Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span> . Suspendisse varius enim in
+					eros elementum.</p>
 				<button class="button__style">New Collection</button>
 			</div>
 		</section>
 		<section class="contact">
+			<p class="complementary__title">Let's Get In touch</p>
 			<div class="contact__inner container">
 				<div class="contact__header">
 					<img src="./image/contact-header-image.png" alt="">
@@ -222,9 +224,14 @@
 					<h2>Latest news<span>&</span>New updates</h2>
 				</div>
 				<div class="contact__info">
-					<input type="email" placeholder="Enter your email">
-					<button>SUBSCRIBE</button>
-					<input type="radio" >
+					<div class="contact__info__mail">
+						<input type="email" placeholder="Enter your email">
+						<button>SUBSCRIBE</button>
+					</div>
+					<div class="contact__info__radio">
+						<input type="radio" id="contactChoice">
+						<label for="contactChoice">Sign up for our newsletter</label>
+					</div>
 				</div>
 			</div>
 		</section>
