Pompeo - footer/test

--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -236,6 +236,34 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+		<div class="footer__inner container">
+			<div class="footer__header">
+				<h3>Pompeo</h3>
+				<p>I have always striven to fix beauty in wood, stone, glass or pottery, that has been my creed.</p>
+			</div>
+			<div class="footer__contacts">
+				<div class="footer__contacts-card">
+					<img src="./image/footer__contacts-1.png" alt="">
+					<h6>EMAIL</h6>
+					<p>pompeopotery@gmail.com</p>
+				</div>
+				<div class="footer__contacts-card">
+					<img src="./image/footer__contacts-2.png" alt="">
+					<h6>FIND</h6>
+					<p>Central Park, Manhattan <br> New York, 1101</p>
+				</div>
+				<div class="footer__contacts-card">
+					<img src="./image/footer__contacts-3.png" alt="">
+					<h6>CALL</h6>
+					<p>+1 292 345 678</p>
+				</div>
+			</div>
+			<div class="footer__copyright">
+				<p><span>Template design by</span> Dorian Hoxha - Image License Info <span>Powered by</span> Webflow</p>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
