Pompeo - footer/master

--- a/Pompeo/index.html
+++ b/Pompeo/index.html
@@ -237,6 +237,7 @@
 		</section>
 	</main>
 	<footer>
+		<div class="line"></div>
 		<div class="footer__inner container">
 			<div class="footer__header">
 				<h3>Pompeo</h3>
@@ -259,9 +260,10 @@
 					<p>+1 292 345 678</p>
 				</div>
 			</div>
-			<div class="footer__copyright">
-				<p><span>Template design by</span> Dorian Hoxha - Image License Info <span>Powered by</span> Webflow</p>
-			</div>
+		</div>
+		<div class="line"></div>
+		<div class="footer__copyright">
+			<p><span>Template design by</span> Dorian Hoxha - Image License Info <span>Powered by</span> Webflow</p>
 		</div>
 	</footer>
 </body>
