Oxygen - css/test

--- a/Oxygen - BEM/index.html
+++ b/Oxygen - BEM/index.html
@@ -4,16 +4,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./style.css">
 	<title>Oxygen</title>
 </head>
 
 <body>
 	<header class="header">
 		<div class="header__top">
-			<div class="header__top-inner">
+			<div class="header__top-inner container">
 				<div class="logo">
 					<a class="logo__link" href="#">
-						<img class="logo__img" src="" alt="">
+						<img class="logo__img" src="./image/header-logo.svg" alt="">
 					</a>
 				</div>
 				<nav class="menu">
@@ -22,36 +23,36 @@
 							<a href="" class="menu__link menu__link--active">HOME</a>
 						</li>
 						<li class="menu__item">
-							<a href="" class="menu__link">ABOUT US</a>
+							<a href="" class="menu__link  menu__link--active">ABOUT US</a>
 						</li>
 						<li class="menu__item">
-							<a href="" class="menu__link">PORTFOLIO</a>
+							<a href="" class="menu__link menu__link--active">PORTFOLIO</a>
 						</li>
 						<li class="menu__item">
-							<a href="" class="menu__link">OUR TEAM</a>
+							<a href="" class="menu__link menu__link--active">OUR TEAM</a>
 						</li>
 						<li class="menu__item">
-							<a href="" class="menu__link">BLOG</a>
+							<a href="" class="menu__link menu__link--active">BLOG</a>
 						</li>
 						<li class="menu__item">
-							<a href="" class="menu__link">CONTACT</a>
+							<a href="" class="menu__link menu__link--active">CONTACT</a>
 						</li>
 					</ul>
 				</nav>
 			</div>
 		</div>
 		<div class="header__content">
-			<div class="header__content-inner">
+			<div class="header__content-inner container ">
 				<h1 class="header__title">OXYGEN</h1>
 				<p class="header__decr">STARTER UI KIT</p>
-				<img class="header__decor" src="" alt="">
 			</div>
+			<img class="header__decor" src="./image/header-mouse.svg" alt="">
 		</div>
 	</header>
 	<section class="about">
-		<div class="about__inner">
-			<h2 class="title">About Us</h2>
-			<div class="about__text">
+		<div class="about__inner container">
+			<h2 class="about__title title">About Us</h2>
+			<div class="about__text decr">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium commodi totam culpa, dolorum
 					asperiores iusto
 					quidem, nesciunt hic eaque blanditiis enim, id maiores nam nobis dignissimos aliquam ad minus nisi.
@@ -60,6 +61,7 @@
 					similique, mollitia et!
 					Autem laborum sint tenetur, earum facere veniam?
 				</p>
+				<br>
 				<p>
 					Sunt fugiat veniam consectetur soluta quia ex tempora quaerat, perferendis! Itaque a praesentium
 					saepe ex distinctio
@@ -71,19 +73,20 @@
 		</div>
 	</section>
 	<section class="expertise">
-		<div class="expertise__inner">
-			<h2 class="title">Our Expertise</h2>
+		<div class="expertise__inner container">
+			<h2 class=" expertise__title title">Our Expertise</h2>
 			<div class="expertise__content">
 				<div class="expertise__content-items">
 					<div class="expertise__content-item">branding</div>
 					<div class="expertise__content-item">DESIGN</div>
 					<div class="expertise__content-item">DEVELOPMENT</div>
 				</div>
-				<div class="expertise__content-text">
+				<div class="expertise__content-text decr">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium commodi totam culpa, dolorum
 						asperiores iusto
 						quidem, nesciunt hic eaque blanditiis enim, id maiores nam nobis dignissimos aliquam ad minus
 						nisi.</p>
+					<br>
 					<p>Autem laborum sint tenetur, earum facere veniam? Sunt fugiat veniam consectetur soluta quia ex
 						tempora quaerat,
 						perferendis! Itaque a praesentium saepe ex distinctio aliquid quis</p>
@@ -91,28 +94,31 @@
 			</div>
 			<div class="expertise__items">
 				<div class="expertise__item">
-					<img class="expertise__item-img" src="" alt="">
+					<img class="expertise__item-img" src="./image/expertice-item-shape.svg" alt="">
 					<div class="expertise__item-box">
 						<h6 class="expertise__item-title">GRAPHIC DESIGN</h6>
-						<p class="expertise__item-decr">Lorem Ipsum Proin gravida nibh vel velit auctor aliquet. Aenean
+						<p class="expertise__item-decr decr">Lorem Ipsum Proin gravida nibh vel velit auctor aliquet.
+							Aenean
 							sollicitudin, lorem quis bibendum auctor, nisi elit
 							consequat ipsum</p>
 					</div>
 				</div>
 				<div class="expertise__item">
-					<img class="expertise__item-img" src="" alt="">
+					<img class="expertise__item-img" src="./image/expertice-item-monitor.svg" alt="">
 					<div class="expertise__item-box">
 						<h6 class="expertise__item-title">WEB DEVELOPMENT</h6>
-						<p class="expertise__item-decr">Lorem Ipsum Proin gravida nibh vel velit auctor aliquet. Aenean
+						<p class="expertise__item-decr decr">Lorem Ipsum Proin gravida nibh vel velit auctor aliquet.
+							Aenean
 							sollicitudin, lorem quis bibendum auctor, nisi elit
 							consequat ipsum</p>
 					</div>
 				</div>
 				<div class="expertise__item">
-					<img class="expertise__item-img" src="" alt="">
+					<img class="expertise__item-img" src="./image/expertice-item-speaker.svg" alt="">
 					<div class="expertise__item-box">
 						<h6 class="expertise__item-title">MARKETING</h6>
-						<p class="expertise__item-decr">Lorem Ipsum Proin gravida nibh vel velit auctor aliquet. Aenean
+						<p class="expertise__item-decr decr">Lorem Ipsum Proin gravida nibh vel velit auctor aliquet.
+							Aenean
 							sollicitudin, lorem quis bibendum auctor, nisi elit
 							consequat ipsum</p>
 					</div>
@@ -120,12 +126,12 @@
 			</div>
 		</div>
 	</section>
-	<section class="feactures">
+	<section class="features">
 		<div class="features__inner">
-			<img class="features__img" src="" alt="">
+			<img class="features__img" src="./image/features-img.png" alt="">
 			<div class="features__content">
-				<h2 class="title"></h2>
-				<div class="features__content-text">
+				<h2 class=" features__title title">Let’s make magic.</h2>
+				<div class="features__content-text decr">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero veniam odio itaque. Molestiae
 						aut dicta accusantium
 						quod, modi ad alias enim dolor delectus iusto! Inventore tempora labore nobis doloribus optio
@@ -133,6 +139,7 @@
 						nostrum, tempore debitis pariatur minus maiores velit, autem ex eum distinctio error fugit.
 						Itaque voluptatum quam
 						veritatis fuga impedit nulla dolor.</p>
+					<br>
 					<p>Nam dignissimos, ratione odit doloribus cum porro, aut. Ipsum nisi odio voluptatum, et,
 						reprehenderit accusamus, est
 						provident debitis dicta ullam esse assumenda, odit? Alias architecto enim pariatur libero ipsam
