Oxygen - portfolio/video/statistic

--- a/Oxygen - BEM/index.html
+++ b/Oxygen - BEM/index.html
@@ -155,8 +155,8 @@
 	</section>
 	<section class="portfolio">
 		<div class="portfolio__inner">
-			<div class="portfolio__header">
-				<h2 class="title"></h2>
+			<div class="portfolio__header container">
+				<h2 class="title">Portfolio</h2>
 				<div class="portfolio__buttons">
 					<button class="portfolio__btn">ALL</button>
 					<button class="portfolio__btn">BRANDING</button>
@@ -167,40 +167,52 @@
 			</div>
 			<div class="portfolio__items">
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
-				</div>
-				<div class="portfolio__items-img">
-					<h7 class="portfolio__title"></h7>
-					<p class="portfolio__decr"></p>
+					<div class="portfolio__items-text">
+						<h7 class="portfolio__title">OCCA CUPIDATAT</h7>
+						<p class="portfolio__decr">DESIGN</p>
+					</div>
 				</div>
 			</div>
 			<button class="portfolio__btn-all">VIEW MORE PROJECTS</button>
@@ -211,7 +223,7 @@
 			incididunt ut labore et dolore magna
 			aliqua.</p>
 		<span class="video__quotes-author">Gilbert Hammond</span>
-		<video class="video__content" src=""></video>
+		<div class="video__content" src=""></div>
 	</section>
 	<section class="statistics">
 		<div class="statistics__inner">
