--- a/Oxygen - BEM/index.html
+++ b/Oxygen - BEM/index.html
@@ -246,59 +246,75 @@
 		</div>
 	</section>
 	<section class="slider">
-		<div class="slider__item">
-			<h4 class="slider_item-title"> Then they show that</h4>
-			<p class="slider__item-decr">The path of the righteous man is beset on all sides by the iniquities of the
-				selfish and the tyranny of evil men.
-				Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
-				darkness, for he is
-				truly his brother’s.
-			</p>
-		</div>
-		<div class="slider__item">
-			<h4 class="slider_item-title"> Then they show that</h4>
-			<p class="slider__item-decr">The path of the righteous man is beset on all sides by the iniquities of the
-				selfish and the tyranny of evil men.
-				Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
-				darkness, for he is
-				truly his brother’s.
-			</p>
-		</div>
-		<div class="slider__item">
-			<h4 class="slider_item-title"> Then they show that</h4>
-			<p class="slider__item-decr">The path of the righteous man is beset on all sides by the iniquities of the
-				selfish and the tyranny of evil men.
-				Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
-				darkness, for he is
-				truly his brother’s.
-			</p>
-		</div>
-		<div class="slider__item">
-			<h4 class="slider_item-title"> Then they show that</h4>
-			<p class="slider__item-decr">The path of the righteous man is beset on all sides by the iniquities of the
-				selfish and the tyranny of evil men.
-				Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
-				darkness, for he is
-				truly his brother’s.
-			</p>
-		</div>
-		<div class="slider__item">
-			<h4 class="slider_item-title"> Then they show that</h4>
-			<p class="slider__item-decr">The path of the righteous man is beset on all sides by the iniquities of the
-				selfish and the tyranny of evil men.
-				Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
-				darkness, for he is
-				truly his brother’s.
-			</p>
-		</div>
-		<div class="slider__item">
-			<h4 class="slider_item-title"> Then they show that</h4>
-			<p class="slider__item-decr">The path of the righteous man is beset on all sides by the iniquities of the
-				selfish and the tyranny of evil men.
-				Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
-				darkness, for he is
-				truly his brother’s.
-			</p>
+		<div class="slider__inner container">
+			<div class="slider__item">
+				<h4 class="slider__item-title"> Then they show that</h4>
+				<p class="slider__item-decr decr">The path of the righteous man is beset on all sides by the iniquities
+					of the
+					selfish and the tyranny of evil men.
+					Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
+					darkness, for he is
+					truly his brother’s.
+				</p>
+			</div>
+			<div class="slider__item">
+				<h4 class="slider__item-title"> Then they show that</h4>
+				<p class="slider__item-decr decr">The path of the righteous man is beset on all sides by the iniquities
+					of the
+					selfish and the tyranny of evil men.
+					Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
+					darkness, for he is
+					truly his brother’s.
+				</p>
+			</div>
+			<div class="slider__item">
+				<h4 class="slider__item-title"> Then they show that</h4>
+				<p class="slider__item-decr decr">The path of the righteous man is beset on all sides by the iniquities
+					of the
+					selfish and the tyranny of evil men.
+					Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
+					darkness, for he is
+					truly his brother’s.
+				</p>
+			</div>
+			<div class="slider__item">
+				<h4 class="slider__item-title"> Then they show that</h4>
+				<p class="slider__item-decr decr">The path of the righteous man is beset on all sides by the iniquities
+					of the
+					selfish and the tyranny of evil men.
+					Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
+					darkness, for he is
+					truly his brother’s.
+				</p>
+			</div>
+			<div class="slider__item">
+				<h4 class="slider__item-title"> Then they show that</h4>
+				<p class="slider__item-decr decr">The path of the righteous man is beset on all sides by the iniquities
+					of the
+					selfish and the tyranny of evil men.
+					Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
+					darkness, for he is
+					truly his brother’s.
+				</p>
+			</div>
+			<div class="slider__item">
+				<h4 class="slider__item-title"> Then they show that</h4>
+				<p class="slider__item-decr decr">The path of the righteous man is beset on all sides by the iniquities
+					of the
+					selfish and the tyranny of evil men.
+					Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of
+					darkness, for he is
+					truly his brother’s.
+				</p>
+			</div>
+			<div class="slider__iradio-list">
+				<input type="radio" class="slider__input-item">
+				<input type="radio" class="slider__input-item">
+				<input type="radio" class="slider__input-item">
+				<input type="radio" class="slider__input-item">
+				<input type="radio" class="slider__input-item">
+				<input type="radio" class="slider__input-item">
+			</div>
 		</div>
 	</section>
 	<section class="team">
